--- a/Script.ipynb
+++ b/Script.ipynb
@@ -2,19 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 é primo\n",
-      "3 é primo\n",
-      "5 é primo\n",
-      "7 é primo\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "limit = int(input(\"Digite o número max\"))\n",
     "number = 0\n",
@@ -30,22 +19,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Então quer dizer que em 2092 você terá 100 anos lol!!!\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -58,22 +40,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 é PAR\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "x = int(input('Bem-vindo, Digite um número e descubra se ele é PAR ou ÍMPAR'))\n",
     "if x % 2 == 0:\n",
@@ -84,42 +59,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 é PAR\n",
-      "1 é ÍMPAR\n",
-      "2 é PAR\n",
-      "3 é ÍMPAR\n",
-      "4 é PAR\n",
-      "5 é ÍMPAR\n",
-      "6 é PAR\n",
-      "7 é ÍMPAR\n",
-      "8 é PAR\n",
-      "9 é ÍMPAR\n",
-      "10 é PAR\n",
-      "11 é ÍMPAR\n",
-      "12 é PAR\n",
-      "13 é ÍMPAR\n",
-      "14 é PAR\n",
-      "15 é ÍMPAR\n",
-      "16 é PAR\n",
-      "17 é ÍMPAR\n",
-      "18 é PAR\n",
-      "19 é ÍMPAR\n",
-      "20 é PAR\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "for i in range(0,20 + 1):\n",
     "    if i % 2 == 0:\n",
@@ -130,22 +78,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hoje é: 22/10/0022\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
@@ -155,7 +96,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
