--- a/Script.ipynb
+++ b/Script.ipynb
@@ -85,8 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoje é: 18/08/2022\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "\n",
@@ -96,8 +104,259 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# INT\n",
+    "idade = 18\n",
+    "ano = 2002\n",
+    "\n",
+    "print(type(idade))\n",
+    "print(type(ano))\n",
+    "print(idade)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "1.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#FLOAT\n",
+    "altura = 1.80\n",
+    "peso = 73.55\n",
+    "\n",
+    "print(type(peso))\n",
+    "print(type(altura))\n",
+    "print(altura)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n",
+      "<class 'complex'>\n",
+      "(2+5j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#COMPLEXO\n",
+    "a = 5+2j\n",
+    "b = 20+6j\n",
+    "\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(complex(2, 5))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "Guilherme\n"
+     ]
+    }
+   ],
+   "source": [
+    "#STRING\n",
+    "nome = 'Guilherme'\n",
+    "profissao = 'Engenheiro de Software'\n",
+    "\n",
+    "print(type(profissao))\n",
+    "print(type(nome))\n",
+    "print(nome)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#BOOLEAN\n",
+    "fim_de_semana = True\n",
+    "feriado = False\n",
+    "\n",
+    "print(type(fim_de_semana))\n",
+    "print(type(feriado))\n",
+    "print(fim_de_semana)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "['Amanda', 'Ana', 'Bruno', 'João']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LISTAS\n",
+    "alunos = ['Amanda', 'Ana', 'Bruno', 'João']\n",
+    "notas = [10, 8.5, 7.8, 8.0]\n",
+    "\n",
+    "print(type(alunos))\n",
+    "print(type(notas))\n",
+    "print(alunos)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "(90, 79, 54, 32, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TUPLE\n",
+    "valores = (90, 79, 54, 32, 21)\n",
+    "pontos = (100, 94.05, 86.8, 62)\n",
+    "\n",
+    "print(type(valores))\n",
+    "print(type(pontos))\n",
+    "print(valores)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "{'Amanda': 1.65, 'Ana': 1.6, 'João': 1.7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DICIONÁRIOS\n",
+    "altura = {'Amanda': 1.65, 'Ana': 1.60, 'João': 1.70}\n",
+    "peso = {'Amanda': 60, 'Ana': 58, 'João': 68}\n",
+    "\n",
+    "print(type(altura))\n",
+    "print(type(peso))\n",
+    "print(altura)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
