--- a/Script.ipynb
+++ b/Script.ipynb
@@ -30,7 +30,6 @@
    "outputs": [],
    "source": [
     "from datetime import date\n",
-    "\n",
     "nome = str(input(\"Qual o seu nome?\"))\n",
     "idade = int(input(f'Bem-vindo(a) {nome}, agora me fala... qual a sua idade?'))\n",
     "data_atual = date.today()\n",
@@ -66,10 +65,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 é PAR\n",
+      "1 é ÍMPAR\n",
+      "2 é PAR\n",
+      "3 é ÍMPAR\n",
+      "4 é PAR\n",
+      "5 é ÍMPAR\n",
+      "6 é PAR\n",
+      "7 é ÍMPAR\n",
+      "8 é PAR\n",
+      "9 é ÍMPAR\n",
+      "10 é PAR\n",
+      "11 é ÍMPAR\n",
+      "12 é PAR\n",
+      "13 é ÍMPAR\n",
+      "14 é PAR\n",
+      "15 é ÍMPAR\n",
+      "16 é PAR\n",
+      "17 é ÍMPAR\n",
+      "18 é PAR\n",
+      "19 é ÍMPAR\n",
+      "20 é PAR\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(0,20 + 1):\n",
+    "num = int(input(\"Digite quantos números quer testar\"))\n",
+    "for i in range(0,num + 1):\n",
     "    if i % 2 == 0:\n",
     "        print(f'{i} é PAR')\n",
     "    else:\n",
@@ -78,8 +106,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
